    for the arithmetic_function/1 proprietary directive (arithmetic functions
    are compile as global instead of as local to the objects or categories
    defining them).

    Updated the YAP config file in order to ignore the style_check/1 directive
    and to interpret the yap_flag/2 directive as a set_prolog_flag/2 directive.

    Updated the "xml_parser" contribution in order to workaround portability
    issues with Qu-Prolog, SICStus Prolog, and XSB.

    Updated the "encodings" example in order to ensure that the there is no
    whitespace before the encoding/1 directive.

    Updated the "attvars" example in order to support B-Prolog and XSB. Also
    added support for using attributed variables within Logtalk parametric
    objects and parametric categories. Thanks to Jan Wielemaker, Vítor Santos
    Costa, and Bart Demoen for feedback and implementation suggestions.

    Updated the "profilers" example with preliminary support for the changes
    to execution profiling in the SICStus Prolog 4.2 version.

    Updated the "expansion" example with more sample code on how to combine
    term- and goal-expansion definitions from different hooks objects.

    Updated the "coinduction" example, adding an experimental keysort/2
    coinductive predicate. Thanks to Jan Burse for the suggestion.

    Updated the "tak" multi-threading example where a missing cut would result
    in quickly exhausting the local stack when using SWI-Prolog due to the
    creation of a very large number of unnecessary choice points. Thanks to
    Timon Van Overveldt for the bug report.

    Updated the "mtbatch" multi-threading example in order to provide expanded
    benchmarking of the "tak" example.

    Updated the MacPorts portfile and the script that updates it in order to
    remove the calculation of the MD5 checksum, which is being phased out by
    MacPorts.

    Updated the Inno Setup GUI Windows installer script in order to workaround