@@ -16,8 +16,8 @@ xslt_proc="xsltproc -path /opt/local/share/xml/xhtml -nonet"
 # xslt_proc=xalan
 # xslt_proc=sabcmd
 
-#fo_proc=fop
-fo_proc=xep
+fo_proc=fop
+#fo_proc=xep
 # fo_proc=xinc
 
 catalog=file:///opt/local/share/xml/xhtml/catalog
